feat(home-carousel): Agrega carrusel completo, estilos y carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,67 @@
 </head>
 <body>
     <main>
+        <section class="container-fluid px-0 container my-5">
+  <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4500">
 
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+
+    <div class="carousel-inner rounded-4 shadow-sm">
+      <div class="carousel-item active">
+        <img src="./img/zapatillas-airmax.webp" class="d-block w-100 object-cover" alt="Zapatillas modelo A" loading="eager">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Zapatillas Nike Air Max</h5>
+          <p>Edición nueva temporada</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/remera-estampada.jpg" class="d-block w-100 object-cover" alt="Remera estampada">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Remera estampada</h5>
+          <p>100% algodón premium</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/buzo-unisex.jpeg" class="d-block w-100 object-cover" alt="Buzo unisex">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Buzo unisex</h5>
+          <p>Con capucha y bolsillo canguro</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/zapatillas-jordan.jpeg" class="d-block w-100 object-cover" alt="Campera de jean">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Zapatillas Jordan</h5>
+          <p>Diseño exclusivo con máxima comodidad</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/Remera-vans.webp" class="d-block w-100 object-cover" alt="Gorra urbana">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Remera estampada vans</h5>
+          <p>Estilo urbano y comodidad para todos los días</p>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev" aria-label="Slide anterior">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next" aria-label="Slide siguiente">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+  </div>
+</section>
     </main>
     <footer>
 
