--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </div>
 
       <div class="carousel-item">
-        <img src="./img/remera-estampada.jpg" class="d-block w-100 object-cover" alt="Remera estampada">
+        <img src="./img/remera-estampada-nf.jpg" class="d-block w-100 object-cover" alt="Remera estampada">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Remera estampada</h5>
+          <h5>Remera estampada North Face</h5>
           <p>100% algodón premium</p>
         </div>
       </div>
@@ -63,7 +63,6 @@
         </div>
       </div>
     </div>
-
     <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev" aria-label="Slide anterior">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </button>
