se agrego correciones para que el footer sea responsive

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <footer class="bg-dark">
       <section class="container">
         <div class="row text-center justify-cotent-center align-items-center">
-          <div class="col-12 col-md-4 ">
+          <div class="col-12 col-md-4 order-sm-2 order-md-1">
             <h4 class="text-white m-5">Redes Sociales</h4>
             <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
             <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
             <a href="https://es-la.facebook.com/login/web/" class="m-2"><i class="fs-3 text-white bi bi-facebook"></i></a>
           </div>
-          <div class="col-12 col-md-4 text-white">
+          <div class="col-12 col-md-4 text-white order-sm-1 order-md-2">
             <div><img src="./img/logo-empresa.png" alt="logo rolling code/ img de ndumentaria" class="w-50">
             </div>
             <p>&copy;Todos los derechos reservados</p>
           </div>
-          <div class="col-12 col-md-4 text-white">
+          <div class="col-12 col-md-4 text-white order-sm-3 order-md-3">
             
             <h4 class="my-3">📍 Ubicación de nuestra tienda</h4>
             <source />
