añadi un banner publicitario y una grilla

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 </head>
 <body>
     <main>
+        <section class="container-fluid bg-black text-center text-light font-monospace p-4">
+            <h2>... ¡Verse bien es por decisión propia! ...</h2>
+        </section>
+        <section class="container-0">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-4">
+                    <img src="/img/Cartel Frase Motivacional Body Positive Minimalista Blanco y Negro.png" class="img-fluid" alt="No es Body Positive">
+                </div>
+                <div class="col-12 col-md-2"></div>
+                <div class="col-12 col-md-6">
+                    <div class="d-flex">
+                        <img src="/img/descarga.jpg" class="img-fluid" alt="Personas posando" style="object-fit: cover; width: 50%;">
+                        <video class="img-fluid" style="object-fit: cover; width: 50%;" autoplay muted loop playsinline src="/img/video-pinterest.mp4" type="video/mp4"></video>
+                    </div>
+                </div>
+            </div> 
+        </section>
 
     </main>
     <footer>
