--- a/index.html
+++ b/index.html
@@ -11,6 +11,116 @@
 </head>
 <body>
     <main>
+        <section class="container-fluid px-0 container my-5">
+  <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4500">
+
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+
+    <div class="carousel-inner rounded-4 shadow-sm">
+      <div class="carousel-item active">
+        <img src="./img/zapatillas-airmax.webp" class="d-block w-100 object-cover" alt="Zapatillas modelo A" loading="eager">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Zapatillas Nike Air Max</h5>
+          <p>Edición nueva temporada</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/remera-estampada-nf.jpg" class="d-block w-100 object-cover" alt="Remera estampada">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Remera estampada North Face</h5>
+          <p>100% algodón premium</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/buzo-unisex.jpeg" class="d-block w-100 object-cover" alt="Buzo unisex">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Buzo unisex</h5>
+          <p>Con capucha y bolsillo canguro</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/zapatillas-jordan.jpeg" class="d-block w-100 object-cover" alt="Campera de jean">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Zapatillas Jordan</h5>
+          <p>Diseño exclusivo con máxima comodidad</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="./img/Remera-vans.webp" class="d-block w-100 object-cover" alt="Gorra urbana">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Remera estampada vans</h5>
+          <p>Estilo urbano y comodidad para todos los días</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev" aria-label="Slide anterior">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next" aria-label="Slide siguiente">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+  </div>
+</section>
+
+<section class="container my-5">
+  <div class="text-center mb-4">
+    <h2 class="fw-bold mb-2">Creatives in Conversation, Controlling the Vision</h2>
+    <p class="text-muted mb-0">Elegí tu estilo y explorá nuestros productos</p>
+  </div>
+
+  <div class="row g-4">
+
+    <div class="col-12 col-md-4">
+      <a href="/pages/categoria1.html" class="cat-card d-block position-relative overflow-hidden rounded-4">
+        <img src="./img/campus-adidas.webp" class="w-100 h-100 cat-img" alt="Categoría Zapatillas" loading="lazy">
+        <div class="cat-overlay"></div>
+        <span class="cat-title">Zapatillas</span>
+      </a>
+    </div>
+
+    <div class="col-12 col-md-4">
+      <a href="/pages/categoria2.html" class="cat-card d-block position-relative overflow-hidden rounded-4">
+        <img src="./img/remera-adidas.webp" class="w-100 h-100 cat-img" alt="Categoría Remeras" loading="lazy">
+        <div class="cat-overlay"></div>
+        <span class="cat-title">Remeras</span>
+      </a>
+    </div>
+
+    <div class="col-12 col-md-4">
+      <a href="/pages/error404.html" class="cat-card d-block position-relative overflow-hidden rounded-4">
+        <img src="./img/buzo-puma.webp" class="w-100 h-100 cat-img" alt="Categoría Buzos" loading="lazy">
+        <div class="cat-overlay"></div>
+        <span class="cat-title">Buzos</span>
+      </a>
+    </div>
+    </div>
+    <div class="row g-4 justify-content-center mt-0">
+    <div class="col-12 col-md-4">
+      <a href="/pages/error404.html" class="cat-card d-block position-relative overflow-hidden rounded-4 ">
+        <img src="./img/pant-baggy.jpeg" class="w-100 h-100 cat-img" alt="Categoría Buzos" loading="lazy">
+        <div class="cat-overlay"></div>
+        <span class="cat-title">Pantalones</span>
+      </a>
+    </div>
+    <div class="col-12 col-md-4">
+      <a href="/pages/error404.html" class="cat-card d-block position-relative overflow-hidden rounded-4">
+        <img src="./img/Gorra-new-era.jpg" class="w-100 h-100 cat-img" alt="Categoría Buzos" loading="lazy">
+        <div class="cat-overlay"></div>
+        <span class="cat-title">Accesorios</span>
+      </a>
+    </div>
+  </div>
+</section>
         <section class="container-fluid bg-black text-center text-light font-monospace p-4">
             <h2>... ¡Verse bien es por decisión propia! ...</h2>
         </section>
@@ -33,7 +143,6 @@
     <footer>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
