--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="img/logo-empresa.png" type="image/x-icon" />
+    <title>Rolling Indumentaria</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg mt-3 navR">
+      <nav class="navbar navbar-expand-lg navR">
         <div class="container">
           <!-- Nav desktop -->
           <ul class="nav-cont">
             <li class="items">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img
                   src="img/logo-minimalista-de-indumentaria.png"
                   alt="Logo Rolling Indumentaria"
@@ -54,10 +55,10 @@
               </button>
             </li>
             <li class="items supItems">
-              <a href="Carrito.html" class="d-none d-lg-inline">
+              <a href="pages/carrito.html" class="d-none d-lg-inline">
                 <i class="bi bi-cart2 icon"></i> Carrito
               </a>
-              <a href="Carrito.html" class="d-block d-lg-none">
+              <a href="pages/carrito.html" class="d-block d-lg-none">
                 <i class="bi bi-bag-fill icon"></i>
               </a>
             </li>
@@ -65,22 +66,22 @@
               <a href="index.html">Inicio/</a>
             </li>
             <li class="items d-none d-lg-inline product">
-              <a href="categoria.html"
+              <a  href="#" role="button"
                 >Productos <i class="bi bi-caret-down-fill"></i>/</a
               >
               <div class="contP">
-                <a href="404.html">Pantalones</a>
-                <a href="404.html">Zapatillas</a>
-                <a href="404.html">Buzos</a>
-                <a href="404.html">Remeras</a>
-                <a href="404.html">Accesorios</a>
+                <a href="pages/categoria1.html">Pantalones</a>
+                <a href="pages/categoria2.html">Zapatillas</a>
+                <a href="pages/error404.html">Buzos</a>
+                <a href="pages/error404.html">Remeras</a>
+                <a href="pages/error404.html">Accesorios</a>
               </div>
             </li>
             <li class="items d-none d-lg-inline">
-              <a href="Contacto.html">Contacto/</a>
+              <a href="pages/contacto.html">Contacto/</a>
             </li>
             <li class="items d-none d-lg-inline">
-              <a href="SobreNosotros.html">Sobre Nosotros</a>
+              <a href="pages/sobrenosotros.html">Sobre Nosotros</a>
             </li>
             <li class="items d-none d-lg-inline">
               <form class="d-flex" role="search">
@@ -110,7 +111,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 d-block d-lg-none">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -126,31 +127,31 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="404.html">Zapatillas</a>
+                    <a class="dropdown-item" href="pages/categoria1.html">Zapatillas</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="404.html">Pantalones</a>
+                    <a class="dropdown-item" href="pages/categoria2.html">Pantalones</a>
                   </li>
-                  <li><a class="dropdown-item" href="404.html">Buzos</a></li>
-                  <li><a class="dropdown-item" href="404.html">Remeras</a></li>
+                  <li><a class="dropdown-item" href="pages/error404.html">Buzos</a></li>
+                  <li><a class="dropdown-item" href="pages/error404.html">Remeras</a></li>
                   <li>
-                    <a class="dropdown-item" href="404.html">Accesorios</a>
+                    <a class="dropdown-item" href="pages/error404.html">Accesorios</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
-                  href="Contacto.html"
+                  href="pages/contacto.html"
                   >Contacto</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
-                  href="SobreNosotros.html"
+                  href="pages/sobrenosotros.html"
                   >Sobre Nosotros</a
                 >
               </li>
@@ -413,8 +414,8 @@
       >
         <h2>... ¡Verse bien es por decisión propia! ...</h2>
       </section>
-      <section class="container-0">
-        <div class="row align-items-center">
+      <section class="container-fluid">
+        <div class="row align-items-center banner">
           <div class="col-12 col-md-4">
             <img
               src="/img/Cartel Frase Motivacional Body Positive Minimalista Blanco y Negro.png"
