--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -14,23 +14,22 @@
 
 <body>
     <main>
-        <section class="container">
+        <section class="container-fluid">
             <article>
                 <h1 class="text-center my-4">Sobre Nosotros</h1>
-                <div class="row justify-content-center align-items-center row-gap-3">
-                    <div class="col-md-2">
+                <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 mx-md-5">
+                    <div class="">
                         <!-- card 1 -->
-                        <div class="card text-bg-dark">
-                            <img src="../img/yop.jpg" class="card-img" alt="Marcos Lautaro Molina">
-                            <div class="card-img-overlay">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
+                        <div class="imagen-container">
+                            <img src="../img/yop.jpg" class="img-fluid" alt="Marcos Lautaro Molina">
+                            <div class="imagen-overplay">
+                                <h5>Card title</h5>
+                                <p class="imagen-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small>Last updated 3 mins ago</small></p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
                         <!-- card 2 -->
                         <div class="card text-bg-dark">
                             <img src="../img/yop.jpg" class="card-img" alt="...">
@@ -42,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
                         <!-- card 3 -->
                         <div class="card text-bg-dark">
                             <img src="../img/yop.jpg" class="card-img" alt="...">
@@ -54,7 +53,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
                         <!-- card 4 -->
                         <div class="card text-bg-dark">
                             <img src="../img/yop.jpg" class="card-img" alt="...">
@@ -66,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
                         <!-- card 5 -->
                         <div class="card text-bg-dark">
                             <img src="../img/yop.jpg" class="card-img" alt="...">
