agregue estilos a las card con un texto dentro de las imagenes que al pasar el mouse sale el texto con fondo negro

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -134,65 +134,53 @@
   <main>
     <section class="container-fluid">
       <article>
-        <h1 class="text-center my-4">Sobre Nosotros</h1>
-        <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 mx-md-5">
-          <div class="">
-            <!-- card 1 -->
-            <div class="imagen-container">
-              <img src="../img/yop.jpg" class="img-fluid" alt="Marcos Lautaro Molina">
-              <div class="imagen-overplay">
-                <h5>Card title</h5>
-                <p class="imagen-text">This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit longer.</p>
-              </div>
+        <h1 class="text-center my-4 fw-bold">Sobre Nosotros</h1>
+        <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 mx-md-auto gap-3">
+          <!-- card 1 -->
+          <div class="imagen-container">
+            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+            <div class="overplay">
+              <h5>Card title</h5>
+              <p>This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit longer.</p>
             </div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
-            <!-- card 2 -->
-            <div class="card text-bg-dark">
-              <img src="../img/yop.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
-              </div>
+          <!-- card 2 -->
+          <div class="imagen-container">
+            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+            <div class="overplay">
+              <h5>Card title</h5>
+              <p>This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit longer.</p>
             </div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
-            <!-- card 3 -->
-            <div class="card text-bg-dark">
-              <img src="../img/yop.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
-              </div>
+          <!-- card 3 -->
+          <div class="imagen-container">
+            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+            <div class="overplay">
+              <h5>Card title</h5>
+              <p>This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit longer.</p>
             </div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
-            <!-- card 4 -->
-            <div class="card text-bg-dark">
-              <img src="../img/yop.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
-              </div>
+          <!-- card 4 -->
+          <div class="imagen-container">
+            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+            <div class="overplay">
+              <h5>Card title</h5>
+              <p>This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit longer.</p>
+             
             </div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4">
-            <!-- card 5 -->
-            <div class="card text-bg-dark">
-              <img src="../img/yop.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
-              </div>
+          <!-- card 5 -->
+          <div class="imagen-container">
+            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+            <div class="overplay">
+              <h5>Card title</h5>
+              <p>This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit longer.</p>
+              
             </div>
           </div>
         </div>
