--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       >
         <h2>... ¡Verse bien es por decisión propia! ...</h2>
       </section>
-      <section class="container-0">
+      <section class="container">
         <div class="row align-items-center">
           <div class="col-12 col-md-4">
             <img
