--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/calzado.css" />
     <link
       rel="shortcut icon"
       href="../img/logo-empresa.png"
@@ -200,7 +201,213 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <!---->
+      <div class="container">
+        <div class="d-flex justify-content-between my-3">
+          <div>
+            <button class="border rounded-2 text-secondary">
+              Productos / Calzado
+            </button>
+          </div>
+          <div>
+            <select
+              name="ordenador"
+              id="ordenador"
+              class="text-secondary rounded-2 text-center"
+            >
+              <option value="">Ordenar Por</option>
+              <option value="">Adidas</option>
+              <option value="">Nike</option>
+              <option value="">Vans</option>
+              <option value="">Puma</option>
+            </select>
+          </div>
+        </div>
+        <h6>
+          Encontrá zapatos de adidas para todos los estilos, deporte,
+          entrenamiento o para lucir a la moda con toda la comodidad que
+          necesitás.
+        </h6>
+        <div class="line-vertical"></div>
+      </div>
+
+      <!--Grilla Categoria Zapatillas-->
+      <section class="container my-3">
+        <div class="row gap-4 justify-content-center">
+          <div class="card" style="width: 18rem">
+            <img
+              src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_01_00_standard.avif"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Launch demo modal
+              </button>
+
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">
+                        Modal title
+                      </h1>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body container">
+                      <div class="row g-4">
+                      <div class="col-6">
+                      <img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_01_00_standard.avif" class="w-100" alt="">
+                      </div>
+                      <div class="col-6">
+                      <img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_02_standard_hover.avif" class="w-100" alt="">
+                      </div>
+                      <div class="col-6">
+                      <img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_03_standard.avif" class="w-100" alt="">
+                      </div>
+                      <div class="col-6">
+                      <video src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_video.webm" autoplay loop controls class="w-100"></video>
+                      </div>
+
+                    </div>
+                    </div>
+                    <div class="modal-footer">
+                      
+                      <button type="button" class="btn btn-primary">
+                        Save changes
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="bg-dark">
       <section class="container">
         <div class="row text-center justify-cotent-center align-items-center">
