--- a/pages/registro.html
+++ b/pages/registro.html
@@ -200,7 +200,128 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="container my-4">
+        <div class="cont-box">
+          <form class="row mx-1">
+            <div class="col-12 col-md-6 mt-md-3">
+              <div class="mb-3">
+                <label for="Nombre" class="form-label"
+                  >Nombre y apellido *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Gustabo Cordera"
+                  aria-label="Name"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="Telefono" class="form-label">Teléfono *</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  placeholder="38143476204"
+                  aria-label="NumberPhone"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="Domicilio" class="form-label">Domicilio *</label>
+                <input
+                  type="address"
+                  class="form-control"
+                  placeholder="Av. Siempre Viva 742"
+                  aria-label="default input example"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="CodigoPostal" class="form-label"
+                  >Codigo Postal *</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  placeholder="4143"
+                  aria-label="default input example"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 mt-md-3">
+              <div class="mb-3">
+                <label for="Nombre" class="form-label">Usuario*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="GusBerV"
+                  aria-label="Name"
+                  minlength="3"
+                  maxlength="15"
+                  required
+                />
+              </div>
+              <div class="my-3">
+                <label for="Email" class="form-label">Email *</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="GusCordeBV25@gmail.com"
+                  aria-label="Name"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="Contraseña" class="form-label">Contraseña *</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="************"
+                  aria-label="default input example"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="Contraseña" class="form-label">
+                  Repetir Contraseña *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="************"
+                  aria-label="default input example"
+                  minlength="3"
+                  maxlength="50"
+                  required
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <div class="mb-3">
+                <p>Los campos con (*) son obligatorios</p>
+              </div>
+              <button type="submit" class="btn btn-danger fs-5 mb-3">
+                Registrar
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
     <footer class="bg-dark">
       <section class="container">
         <div class="row text-center justify-cotent-center align-items-center">
