se aregaron precio y descripcion de los articulos en las card, se centraron su textos y se acomodaron los link que redireccionaban a la pages de Zapatillas

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 >Productos <i class="bi bi-caret-down-fill"></i>/</a
               >
               <div class="contP">
-                <a href="pages/categoria1.html">Pantalones</a>
-                <a href="pages/categoria2.html">Zapatillas</a>
+                <a href="./pages/categoria1.html">Pantalones</a>
+                <a href="./pages/categoria2.html">Zapatillas</a>
                 <a href="pages/error404.html">Buzos</a>
                 <a href="pages/error404.html">Remeras</a>
                 <a href="pages/error404.html">Accesorios</a>
@@ -127,12 +127,12 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="pages/categoria1.html"
+                    <a class="dropdown-item" href="./pages/categoria2.html"
                       >Zapatillas</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="pages/categoria2.html"
+                    <a class="dropdown-item" href="./pages/categoria1.html"
                       >Pantalones</a
                     >
                   </li>
@@ -344,7 +344,7 @@
         <div class="row g-4">
           <div class="col-12 col-md-4">
             <a
-              href="/pages/categoria1.html"
+              href="/pages/categoria2.html"
               class="cat-card d-block position-relative overflow-hidden rounded-4"
             >
               <img
@@ -360,7 +360,7 @@
 
           <div class="col-12 col-md-4">
             <a
-              href="/pages/categoria2.html"
+              href="/pages/categoria1.html"
               class="cat-card d-block position-relative overflow-hidden rounded-4"
             >
               <img
