--- a/pages/categoria2.html
+++ b/pages/categoria2.html
@@ -225,7 +225,7 @@
           </div>
         </div>
         <h6>
-          Encontrá zapatos de adidas para todos los estilos, deporte,
+          Encontrá zapatos para todos los estilos, deporte,
           entrenamiento o para lucir a la moda con toda la comodidad que
           necesitás.
         </h6>
@@ -244,11 +244,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$149.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+              Zapatillas Forum 84 Low ADV
               </p>
+              <p class="text-secondary">Hombre originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -332,11 +332,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$179.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Zapatillas Sambae
               </p>
+              <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -420,11 +420,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$149.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+               Zapatillas Tokyo
               </p>
+              <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -447,7 +447,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="Tokyo">
-                        Zapatillas Sambae
+                        Zapatillas Tokyo
                       </h1>
                       <button
                         type="button"
@@ -508,11 +508,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$179.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+              Zapatillas Campus años 2000
               </p>
+              <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -535,7 +535,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="Campus2000">
-                        Zapatillas Sambae
+                        Zapatillas Campus años 2000
                       </h1>
                       <button
                         type="button"
@@ -596,11 +596,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$134.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Zapatillas Samba OG
               </p>
+              <p class="text-secondary">Origials</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -623,7 +623,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="SambaOG">
-                        Zapatillas Sambae
+                        Zapatillas Samba OG
                       </h1>
                       <button
                         type="button"
@@ -684,11 +684,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$169.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Zapatillas Campus Rosas 00S
               </p>
+              <p class="text-secondary">Mujer Originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -711,7 +711,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="CampusRosas">
-                        Zapatillas Sambae
+                        Zapatillas Campus Rosas 00S
                       </h1>
                       <button
                         type="button"
@@ -771,11 +771,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$179.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Zapatilla Superstar
               </p>
+              <p class="text-secondary">Originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -798,7 +798,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="Superstar">
-                        Zapatillas Sambae
+                        Zapatilla Superstar
                       </h1>
                       <button
                         type="button"
@@ -859,11 +859,11 @@
               />
             </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">149.999</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Zapatillas Forum Low CL
               </p>
+              <p class="text-secondary">Originals</p>
               <!-- Button trigger modal -->
               <button
                 type="button"
@@ -886,7 +886,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="ForumLow">
-                        Zapatillas Sambae
+                        Zapatillas Forum Low CL
                       </h1>
                       <button
                         type="button"
