se agrego al boton de comprar un link que redirecciona a la pages de detallesproducto2

--- a/pages/categoria2.html
+++ b/pages/categoria2.html
@@ -314,9 +314,7 @@
                       </div>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <button type="button" class="btn btn-primary">
-                        Comprar
-                      </button>
+                      <a href="./detalleproducto2.html" class="btn bg-primary text-white">Comprar</a>
                     </div>
                   </div>
                 </div>
