se corrigieron los link del nav que redireccionan a la categoria de remeras

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 >Productos <i class="bi bi-caret-down-fill"></i>/</a
               >
               <div class="contP">
-                <a href="./pages/categoria1.html">Pantalones</a>
+                <a href="./pages/categoria1.html">Remeras</a>
                 <a href="./pages/categoria2.html">Zapatillas</a>
                 <a href="pages/error404.html">Buzos</a>
-                <a href="pages/error404.html">Remeras</a>
+                <a href="pages/error404.html">Pantalones</a>
                 <a href="pages/error404.html">Accesorios</a>
               </div>
             </li>
