--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -74,10 +74,10 @@
                 >Productos <i class="bi bi-caret-down-fill"></i>/</a
               >
               <div class="contP">
-                <a href="categoria1.html">Pantalones</a>
+                <a href="categoria1.html">Remeras</a>
                 <a href="categoria2.html">Zapatillas</a>
                 <a href="error404.html">Buzos</a>
-                <a href="error404.html">Remeras</a>
+                <a href="error404.html">Pantalones</a>
                 <a href="error404.html">Accesorios</a>
               </div>
             </li>
